deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edge-app
  template:
    metadata:
      labels:
        app: edge-app
    spec:
      containers:
      - name: edge-app
        image: chameleon159/edge-app:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
