service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edge-app
spec:
  selector:
    app: edge-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
