ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: edge-app

spec:
  ingressClassName: traefik

  rules:
  - host: edge-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: edge-app
            port:
              number: 80
